--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Updated colors */
 
 body {
-  background-color: #FFBEAF; /* Zenstores pink */
+  background-color: #FFEFEB; /* Zenstores light pink */
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
